--- a/catalog.html
+++ b/catalog.html
@@ -322,5 +322,17 @@
         <button class="botton continue" type="button">Продолжить покупки</button>
       </p>
     </section> 
+    <section class="modal modal-order">
+      <span>Товар добавлен в корзину!</span>
+      <div class="modal-order-nav"> 
+        <form class="order-now" action="https://echo.htmlacademy.ru" method="post">
+          <fieldset>
+            <button class="button button-continue" type="button">Продолжить покупки</button>
+            <button class="button button-close" type="button" aria-label="Закрыть окно"></button>
+          </fieldset>
+        </form>
+        <a href="order.html" class="button order-page">Оформить заказ</a>
+      </div>
+    </section>
   </body>
 </html>
